# algohood_signal

./: README-CN.md  README.md  pyproject.toml
algoSignal/algoConfig/: loggerConfig.py  profileConfig.py
algoSignal/algoEngine/: clusterMgr.py  dataMgr.py  eventMgr.py  featureMgr.py  interceptMgr.py  modelMgr.py  performanceMgr.py  signalMgr.py  targetMgr.py
